--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Ignore runs directory (temporary files, logs, outputs)
 runs/
 
 # Ignore Python virtual environments
@@ -98,3 +97,4 @@ logs/
 # Ridges repository (should be cloned separately)
 ridges/
 /ridges/
+ridges/
